@@ -56,6 +56,8 @@ setGeneric("plotFeatures", function(object, ...) standardGeneric("plotFeatures")
 setGeneric("plotCrossMatching", function(object, ...) standardGeneric("plotCrossMatching"))
 setGeneric("plotCrossMatchingSummary", function(object, ...) standardGeneric("plotCrossMatchingSummary"))
 setGeneric("plotCrossMatchingPerformance", function(object, ...) standardGeneric("plotCrossMatchingPerformance"))
+setGeneric("plotCrossMatchingDiff", function(object, ...) standardGeneric("plotCrossMatchingDiff"))
+setGeneric("plotCumulativeNumberOfFragments", function(object, ...) standardGeneric("plotCumulativeNumberOfFragments"))
 setGeneric("plotCumulativeNumberOfFragments", function(object, ...) standardGeneric("plotCumulativeNumberOfFragments"))
 setGeneric("getEMRTtable", function(object, ...) standardGeneric("getEMRTtable"))
 setGeneric("getEMRTtable", function(object, ...) standardGeneric("getEMRTtable"))
